<resources>
    <string name="app_name">TemperatureStation</string>
    <string name="action_settings">Settings</string>
    <string name="status">Status</string>
    <string name="device_name">Device name</string>
    <string name="button_start_stop_service_start">Start service</string>
    <string name="button_start_stop_service_stop">Stop service</string>
    <string name="button_select_paired_devices">Select paired device</string>
    <string name="button_show_temp">Show temperature</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_activity_select_device">ActivitySelectDevice</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_settings">ActivitySettings</string>
</resources>
