<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/status" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatusName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/device_name"
        android:id="@+id/textViewDeviceName"
        android:layout_below="@+id/textViewStatusName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_stop_service_start"
        android:id="@+id/buttonStartStopService"
        android:layout_below="@+id/textViewDeviceName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickStartStopService" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_paired_devices"
        android:id="@+id/buttonSelectPairedDevice"
        android:layout_below="@+id/buttonStartStopService"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickSelectPairedDevice" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_temp"
        android:id="@+id/buttonTemperatureShow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickTemperatureShow"
        android:layout_below="@+id/buttonSelectPairedDevice"
        android:nestedScrollingEnabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/unknown"
        android:id="@+id/textViewStatusValue"
        android:layout_above="@+id/textViewDeviceName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/unknown"
        android:id="@+id/textViewDeviceValue"
        android:layout_alignTop="@+id/textViewDeviceName"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewTemperatures"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonTemperatureShow" />

</RelativeLayout>
